fix: Top App Bar overflow

--- a/src/components/HomeBanner.scss
+++ b/src/components/HomeBanner.scss
@@ -11,6 +11,7 @@
   height: calc(100vh - 56px);
   position: relative;
   display: flex;
+  overflow: hidden;
 
   @media screen and (max-width: 1199px) {
     flex-direction: column;
